CHATS_SIT/force-app/main/default/objects/batchsit_t_auth_notes_hist__x.object
<CustomObject>
    <description>batchsit$t_auth_notes_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_auth_notes_hist</externalName>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_notes_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_create__c</fullName>
        <description>dte_create</description>
        <externalDeveloperName>dte_create</externalDeveloperName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Authorization ID</label>
        <length>50</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Authorization Notes Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_auth_notes_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_create_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_create_user</description>
        <externalDeveloperName>idn_create_user</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_notes_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_notes_auth__c</fullName>
        <description>idn_notes_auth</description>
        <externalDeveloperName>idn_notes_auth</externalDeveloperName>
        <label>Identifier Notes authorization</label>
        <length>50</length>
        <referenceTo>batchsit_t_auth_notes__x</referenceTo>
        <relationshipLabel>Authorization Notes Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_auth_notes_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_notes_auth_hist__c</fullName>
        <description>idn_notes_auth_hist</description>
        <externalDeveloperName>idn_notes_auth_hist</externalDeveloperName>
        <label>Identifier Notes authorization history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_notes_histy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current record indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_notes__c</fullName>
        <description>txt_notes</description>
        <externalDeveloperName>txt_notes</externalDeveloperName>
        <label>Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Authorization Notes History</label>
    <pluralLabel>Authorization Notes History</pluralLabel>
</CustomObject>